[tool.poetry]
name = "temporal-tracing"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
temporalio = {extras = ["opentelemetry"], version = "^1.4.0"}
opentelemetry-exporter-otlp-proto-grpc = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
